style: ensure heading does not wrap onto next line in mobile
And tile matcher is vertically aligned.

--- a/src/Game/style.css
+++ b/src/Game/style.css
@@ -11,6 +11,10 @@
   transform: translate(-50%, -50%);
 }
 
+.heading {
+  font-size: 1.95em;
+}
+
 .text-center {
   text-align: center;
 }
